# qt_common

./: .gitignore  Buildinfo.properties.in  CMakeLists.txt  LICENSE  README.md  _clang-format
CustomWidgets/: ArrowIconComboBox.cpp  ArrowIconComboBox.h  ArrowIconWidget.cpp  ArrowIconWidget.h  CMakeLists.txt  CheckBoxWidget.cpp  CheckBoxWidget.h  ColoredLegendGraphicsView.cpp  ColoredLegendGraphicsView.h  ColoredLegendScene.cpp  ColoredLegendScene.h  CompletionBarWidget.cpp  CompletionBarWidget.h  DonutPieWidget.cpp  DonutPieWidget.h  DoubleSliderWidget.cpp  DoubleSliderWidget.h  FileLoadingWidget.cpp  FileLoadingWidget.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  IconButton.cpp  IconButton.h  ListWidget.cpp  ListWidget.h  NavigationBar.cpp  NavigationBar.h  NavigationListWidget.cpp  NavigationListWidget.h  QuickLinkButtonWidget.cpp  QuickLinkButtonWidget.h  RecentTraceMiniWidget.cpp  RecentTraceMiniWidget.h  RulerWidget.cpp  RulerWidget.h  ScaledPaneWidget.cpp  ScaledPaneWidget.h  TabBar.cpp  (+7 more)
Scaling/: CMakeLists.txt  ScaledGridLayoutWrapper.cpp  ScaledGridLayoutWrapper.h  ScaledLayoutWrapper.cpp  ScaledLayoutWrapper.h  ScaledMainWindowWrapper.cpp  ScaledMainWindowWrapper.h  ScaledObjectWrapper.h  ScaledWidgetWrapper.cpp  ScaledWidgetWrapper.h  ScalingManager.cpp  ScalingManager.h
Util/: CMakeLists.txt  ColorGenerator.cpp  ColorGenerator.h  ColorPalette.cpp  ColorPalette.h  CommonDefinitions.h  ModelViewMapper.cpp  ModelViewMapper.h  QtUtil.cpp  QtUtil.h  RestoreCursorPosition.h
cmake/: dev_tools.cmake  devtools_qt_helper.cmake
custom_widgets/: CMakeLists.txt  arrow_icon_combo_box.cpp  arrow_icon_combo_box.h  check_box_widget.cpp  check_box_widget.h  colored_legend_graphics_view.cpp  colored_legend_scene.cpp  colored_legend_scene.h  completion_bar_widget.cpp  donut_pie_widget.cpp  donut_pie_widget.h  double_slider_widget.cpp  double_slider_widget.h  elided_line_label.cpp  elided_line_label.h  expanding_scroll_area.cpp  file_loading_widget.cpp  file_loading_widget.h  graphics_scene.cpp  graphics_view.h  icon_button.cpp  icon_button.h  list_widget.cpp  message_overlay.cpp  message_overlay.h  message_overlay.ui  message_overlay_container.cpp  message_overlay_container.h  navigation_bar.cpp  navigation_bar.h  navigation_list_model.h  navigation_list_view.cpp  navigation_list_view.h  navigation_list_widget.cpp  navigation_list_widget.h  quick_link_button_widget.cpp  quick_link_button_widget.h  recent_trace_mini_widget.cpp  recent_trace_mini_widget.h  recent_trace_widget.cpp  (+47 more)
source/: version.h.in
source/qt_common/custom_widgets/: CMakeLists.txt  arrow_icon_combo_box.cpp  arrow_icon_combo_box.h  banner_widget.cpp  banner_widget.h  banner_widget.ui  check_box_widget.cpp  check_box_widget.h  colored_legend_graphics_view.cpp  colored_legend_graphics_view.h  colored_legend_scene.cpp  colored_legend_scene.h  completion_bar_widget.cpp  completion_bar_widget.h  donut_pie_widget.cpp  donut_pie_widget.h  double_slider_widget.cpp  double_slider_widget.h  driver_overrides_model.cpp  driver_overrides_model.h  driver_overrides_notification_banner.cpp  driver_overrides_notification_banner.h  driver_overrides_notification_config_widget.cpp  driver_overrides_notification_config_widget.h  driver_overrides_notification_config_widget.ui  driver_overrides_tree_widget.cpp  driver_overrides_tree_widget.h  driver_overrides_tree_widget.ui  elided_line_label.cpp  elided_line_label.h  expanding_scroll_area.cpp  expanding_scroll_area.h  file_loading_widget.cpp  file_loading_widget.h  graphics_scene.cpp  graphics_scene.h  graphics_view.cpp  graphics_view.h  icon_button.cpp  icon_button.h  (+86 more)
source/qt_common/utils/: CMakeLists.txt  color_generator.cpp  color_generator.h  color_palette.cpp  color_palette.h  common_definitions.h  locale_setting.cpp  locale_setting.h  model_view_mapper.cpp  model_view_mapper.h  qt_util.cpp  qt_util.h  restore_cursor_position.h  scaling_manager.cpp  scaling_manager.h  shared_isa_dictionary.cpp  shared_isa_dictionary.h  zoom_icon_group_manager.cpp  zoom_icon_group_manager.h  zoom_icon_manager.cpp  zoom_icon_manager.h
utils/: CMakeLists.txt  color_generator.cpp  color_generator.h  common_definitions.h  locale_setting.cpp  model_view_mapper.cpp  model_view_mapper.h  qt_util.cpp  qt_util.h  restore_cursor_position.h  scaling_manager.cpp  scaling_manager.h  shared_isa_dictionary.cpp  shared_isa_dictionary.h  zoom_icon_group_manager.cpp  zoom_icon_group_manager.h  zoom_icon_manager.cpp  zoom_icon_manager.h
